apps/verdaccio/k8s/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: verdaccio
  namespace: verdaccio
spec:
  parentRefs:
    - name: homelab
      namespace: traefik
      sectionName: https
  hostnames:
    - npm.biplane.v6.rocks
  rules:
    - backendRefs:
        - name: verdaccio
          port: 80
